--- a/src/main/webapp/WEB-INF/velocity/layout.vm
+++ b/src/main/webapp/WEB-INF/velocity/layout.vm
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css"
       href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/css/bootstrap-responsive.min.css"/>
 <link rel="stylesheet" type="text/css" href="http://getbootstrap.com/examples/sticky-footer/sticky-footer.css"/>
-<link rel="stylesheet" type="text/css" href="../../resources/style.css"/>
+<link rel="stylesheet" type="text/css" href="../../resources/style.css">
 
 <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
