--- a/src/main/webapp/WEB-INF/velocity/admin.vm
+++ b/src/main/webapp/WEB-INF/velocity/admin.vm
@@ -1,119 +1,8 @@
-<script type="text/javascript">
-    $(document).ready(function () {
-        $("#divtable").dataTable({
-            "sAjaxSource": "/datatables/div",
-            "bJQueryUI": true,
-            "aoColumns": [
-                { "mDataProp": "id" },
-                { "mDataProp": "name" },
-                {   "sDefaultContent": "",
-                    "bSortable": false,
-
-                    "fnRender": function (o) {
-
-                        return '<button class="btn-mini btn-warning" id="editBtn' + o.aData["id"] + '" value="' + o.aData["id"] + '" data-toggle="modal">Edit</button>'
-                    }
-                },
-
-                {   "sDefaultContent": "",
-                    "bSortable": false,
-                    "fnRender": function (o) {
-                        return '<input type="button" id="delete/' + o.aData["id"] + '" class="btn btn-danger btn-mini"  value="Delete" data-toggle="confirmation" data-href="/div/delete/' + o.aData["id"] + '" />'
-                    }
-                }
-
-            ],
-            "sDom": "<'row'<'span6'l><'span6'f>r>t<'row'<'span6'i><'span6'p>>",
-            "sPaginationType": "bootstrap",
-            "oLanguage": {
-                "sLengthMenu": "_MENU_ records per page"
-            },
-            "iDisplayLength": 5,
-            "aLengthMenu": [
-                [5, 10, 25, -1],
-                [5, 10, 25, "All"]
-            ],
-            "bProcessing": true,
-            "fnDrawCallback": function () {
-                $("[id^=delete]").confirmation({singleton: true, popout: true});
-
-
-            }
-        });
-
-    });
-</script>
-<script src="../../resources/fnReloadAjax.js"></script>
-<script type="text/javascript">
-    jQuery(document).ready(function () {
-        jQuery("#editForm").submit(function (e) {
-            jQuery(".error").remove();
-            jQuery.ajax({
-                url: "/div/update",
-                context: document.body,
-                type: 'post',
-                data: jQuery(this).serialize(),
-
-            }).done(function (res) {
-                        if (res.status === "ERROR") {
-                            for (var key in res.errorsMap) {
-                                var err = "<span class=\"error\" id=\"" + key + "Id\">" + res.errorsMap[key] + "</span>";
-                                jQuery("[name^='" + key + "']").after(err);
-                            }
-                        } else {
-                            /*jQuery("#msg").html("Form submitted");*/
-                            $('#myModal').modal('hide');
-                            var $divtable =
-                            $("#divtable").dataTable({ bRetrieve: true });
-                                $divtable.fnReloadAjax();
-                        }
-                    }).fail(function (data) {
-                        jQuery("#msg").html("<span class=\"error\">Server failed to process request</span>");
-                    });
-            return false;
-        });
-    });
-</script>
-
-
-<script type="text/javascript">
-    $(document).on("click", "#btnNew", function () {
-        document.getElementById("editForm").reset();
-
-        $('#myModal').modal({
-            keyboard: false
-        })
-    });
-
-</script>
-
-<script type="text/javascript">
-    $(document).on("click", "[id^=editBtn]", function () {
-
-
-        jQuery.getJSON("/div/" + $(this).val(), function (data) {
-            $('#myModal').modal({
-                keyboard: false
-            })
-            $('#id').val(data.id);
-            $('#name').val(data.name);
-
-        });
-    })
-
-</script>
-<script type="text/javascript">
-    $('#myModal').on('hidden', function () {
-        $(this).removeData('.modal');
-    })
-
-
-</script>
+<script type="text/javascript" src="../../resources/admin.js"></script>
 <html>
 <head>
 
-    <title>HR app
-    </title>
+    <title> #springMessage("applicationName")</title>
 
 </head>
 <body>
@@ -137,15 +26,15 @@
 
         <div class="span10 offset1">
             <div class="well well-large">
-                <div class="span12">
+                <div class="span12" id="tablespan">
 
                     <table cellpadding="0" cellspacing="0" border="0"
                            class="table table-striped table-bordered table-hover"
                            id="divtable">
                         <thead>
                         <tr>
-                            <th>id</th>
-                            <th>Division Name</th>
+                            <th>#springMessage("id")</th>
+                            <th>#springMessage("divisionName")</th>
                             <th>&nbsp;</th>
                             <th>&nbsp;</th>
                         </tr>
@@ -154,8 +43,8 @@
                         </tbody>
                         <tfoot>
                         <tr>
-                            <th>id</th>
-                            <th>Division Name</th>
+                            <th>#springMessage("id")</th>
+                            <th>#springMessage("divisionName")</th>
                             <th>&nbsp;</th>
                             <th>&nbsp;</th>
                         </tr>
@@ -173,7 +62,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="myModalLabel">Add division</h4>
+                    <h4 class="modal-title" id="myModalLabel">#springMessage("modalDivision")</h4>
                 </div>
                 <div class="modal-body" id="body" style="max-height: 600px">
                     <div class="span2" style="margin-top: 30px">
@@ -182,7 +71,7 @@
                             #springFormHiddenInput("div.id" 'id="divId"') <br/>
                             #springShowErrors("<br>" "error")
                             <div class="control-group">
-                                <label for="divName" class="control-label">Division Name:</label>
+                                <label for="divName" class="control-label">#springMessage("divisionName") :</label>
                                 #springFormInput("div.name" 'id="divName"')<br/>
                             </div>
 
@@ -191,8 +80,8 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <input type="submit" id="modalSubmit" value="Save changes" class="btn btn-primary"/>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">#springMessage("label.close")</button>
+                    <input type="submit" id="modalSubmit" value=#springMessage("label.save") class="btn btn-primary"/>
                     </form>
                 </div>
             </div>
