--- a/src/main/webapp/WEB-INF/velocity/login_layout.vm
+++ b/src/main/webapp/WEB-INF/velocity/login_layout.vm
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="../../resources/style.css">
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
